Fixes the bug on the newsletter form on small devices

--- a/public/stylesheets/partials/_common.scss
+++ b/public/stylesheets/partials/_common.scss
@@ -51,6 +51,10 @@ body {
     //border-bottom: 3px solid rgba(0,0,0,0.15);
     transition: background-color 0.2s;
     
+    @media (max-width: $screen-xs-max) {
+        font-size: 1.3em;
+    }
+
     &:hover,
     &:active,
     &:focus {
